Set the nav bar to correct margin to align with the logo

--- a/index.css
+++ b/index.css
@@ -54,6 +54,7 @@ body {
   display: inline;
   float: right;
   margin-right: 305px;
+  margin-top: 40px;
   font-size: 25px;
   font-weight: bold;
   font-family: "Roboto";
